welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:14: error: not enough arguments for method move: (nbpas: Int, versLAvant: Boolean)Unit.
Unspecified value parameters nbpas, versLAvant.
move();
    ^