welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbpas:Int,versLAvant:Boolean){
	

if (versLAvant==true) {
	for ( i<-1 to nbpas )
	{avance();}
}
else {
	for (i<-1 to nbpas) {recule(); }
}

}
move();

